web-infras/parser/tests/fixtures/babel/es2015/destructuring/binding-arguments-module/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,9)
1|const { arguments } = foo();
 |       ^
